2010-08-02  Ingo Renner  <ingo.renner@dkd.de>

	* Added an option to completely en/disable EXT:solr - Useful for multi site installation where you want to enable EXT:solr for some sites only

2010-07-29  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed utf-8 encoding for dynamic string and text fields added through TypoScript configuration in the frontend indexer

2010-07-28  Ingo Renner  <ingo.renner@dkd.de>

	* Added method tx_solr_SolrService::deleteByType()

2010-07-28  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* !!! Fixed issue #7698: Upgrade auto suggest to use jQuery UI 1.8
	* !!! Upgraded to jQuery 1.4.2
	* Added configuration options to change javascript files and stylesheets used by suggestions

2010-07-27  Ingo Renner  <ingo.renner@dkd.de>

	* Added a way to disable / reset the minimum match mm query parameter
	* Added support for the boost function parameter (bf). Can be set through API tx_solr_Query->setBoostFunction(), TypoScript, and Flexform

2010-07-22  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Fixed issue #6253: Result links must be made XHTML strict
	* Fixed issue #7795: Switching the number of results per page breaks pagebrowser

2010-07-21  Markus Goldbach <markus.godlbach@dkd.de>

	* Changed install script, copy schema.xml and solrconfig.xml from svn and cleanup solr-tomcat directory

2010-07-21  Ingo Renner  <ingo.renner@dkd.de>

	* Changed the frontend indexer and tx_solr_Search to use tx_solr_ConnectionManager->getConnectionByPageId() to get a Solr connection
	* Added support for https Solr connections
	* Added support for the minimum match parameter (mm)

2010-07-20  Markus Goldbach  <markus.goldbach@dkd.de>

	* Changed the default schema.xml for mulitcore and singelcore, the spell field's content is not stored anymore

2010-07-20  Ingo Renner  <ingo.renner@dkd.de>

	* Changed solrconfig.xml so that spellchecker dictionaries are built on OPTIMIZE
	* Added spellcheck.collate=true when using spellchecking