@@ -1,0 +1,48 @@
+<?php
+/***************************************************************
+*  Copyright notice
+*
+*  (c) 2010 Markus Goldbach <markus.goldbach@dkd.de>
+*  All rights reserved
+*
+*  This script is part of the TYPO3 project. The TYPO3 project is
+*  free software; you can redistribute it and/or modify
+*  it under the terms of the GNU General Public License as published by
+*  the Free Software Foundation; either version 2 of the License, or
+*  (at your option) any later version.
+*
+*  The GNU General Public License can be found at
+*  http://www.gnu.org/copyleft/gpl.html.
+*  A copy is found in the textfile GPL.txt and important notices to the license
+*  from the author is found in LICENSE.txt distributed with these scripts.
+*
+*
+*  This script is distributed in the hope that it will be useful,
+*  but WITHOUT ANY WARRANTY; without even the implied warranty of
+*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+*  GNU General Public License for more details.
+*
+*  This copyright notice MUST APPEAR in all copies of the script!
+***************************************************************/
+
+
+/**
+ * FacetstModifier interface, allows to modify the facets
+ *
+ * @author	Markus Goldbach <markus.goldbach@dkd.de>
+ * @package TYPO3
+ * @subpackage solr
+ */
+interface tx_solr_FacetsModifier {
+
+	/**
+	 * Modifies the given factes and returns the modified facets as array
+	 *
+	 * @param	tx_solr_pi_results_FacetingCommand	The search facet command
+	 * @return	array	The facets with fields as array
+	 */
+	public function modifyFacets($resultCommand, $facets);
+
+}
+
+?>
